--- a/wp-content/themes/analysis-center/css/main.css
+++ b/wp-content/themes/analysis-center/css/main.css
@@ -10,10 +10,6 @@
 	display: table-cell;
 	text-align: center;
 }
-#logo img {
-	width: 100px;
-	height: 100px;
-}
 .menu-top {
 	width: 70%;
 	display: table-cell;
@@ -23,6 +19,7 @@
 	padding: 10px;
 	font-size: 16px;
 	line-height: normal;
+	color: #fa5f34;
 }
 .container {
 	width: 1020px;
@@ -212,12 +209,30 @@ footer ul li a,footer ul li a:visited{
     line-height: 36px;
 }
 
+.top-header {
+	background: #fa5f34;
+	color: #fff;
+	text-align: center;
+	padding: 10px;
+}
+.top-header p {
+	margin: 0;
 
+	display: inline-block;
+}
 
-
-
-
-
+.top-header a {
+	color: #fff;
+	font-size: 20px;
+}
+.footer-logo #logo {
+	padding-top: 20%;
+}
+.top-header ul {
+	margin: 0;
+	padding: 0;
+	display: inline-block;
+}
 
 
 
