--- a/wp-content/themes/analysis-center/css/main.css
+++ b/wp-content/themes/analysis-center/css/main.css
@@ -1,3 +1,36 @@
+.swiper-container {
+  width: 100%;
+  height: 80px;
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.page {
+	margin-top: -20px;
+}
+.swiper-slide a{
+	width: 100%;
+	display: block;
+}
+.swiper-slide img {
+	width: 100%;
+	height: 80px;
+}
 .site-header {
 	background: #d9edf7;
 }
@@ -577,9 +610,12 @@ footer a {
 	text-decoration: underline;
 	cursor: pointer;
 }
-
+/*
 a:visited {
 	color: #337ab7;
+}*/
+.mt30 {
+	margin-top: 30px;
 }
 @media (min-width: 1200px) {
 	.modal-dialog {
