--- a/wp-content/themes/analysis-center/css/main.css
+++ b/wp-content/themes/analysis-center/css/main.css
@@ -305,6 +305,9 @@ footer a {
 }
 .tabs .nav-tabs>li>a {
 	margin-right: 0;
+	font-family: Raleway-Bold;
+	text-transform: uppercase;
+	font-size: 18px;
 }
 .tabs .nav-tabs>li.active>a,.tabs .nav-tabs>li.active>a:focus,.tabs .nav-tabs>li.active>a:hover {
 	background: #e3031b;
@@ -377,6 +380,17 @@ footer a {
 		width: 25%;
 		float: left;
 	}
+	.banner-left .col-md-6 {
+		width: 50%;
+		float: left;
+	}
+	.banner-right {
+		margin-top: 20px;
+	}
+	.banner-right div {
+		width: 100%;
+		text-align: center;
+	}
 }
 @media only screen and (max-width: 680px) {
 	.original-price {
@@ -390,6 +404,10 @@ footer a {
 	}
 	.tabs .nav-tabs>li {
 		font-size: 16px;
+	}
+	.swiper-slide img,
+	.swiper-container{
+	    height: 50px;
 	}
 
 }
@@ -417,6 +435,16 @@ footer a {
 		min-width: 21%;
 		font-size: 14px;
 	}
+	.banner-left .col-md-6 {
+		width: 100%;
+		float: left;
+	}
+	.banner-right div img {
+		width: 100%;
+	}
+	.sticky-banner {
+		display: none;
+	}
 }
 
 @media only screen and (max-width: 375px) {
@@ -430,6 +458,14 @@ footer a {
 	}
 	.title-product a {
 		font-size: 14px;
+	}
+
+	.swiper-slide img,
+	.swiper-container{
+	    height: 35px;
+	}
+	.tabs .nav-tabs>li>a {
+		font-size: 11px;
 	}
 }
 
@@ -616,6 +652,14 @@ a:visited {
 }*/
 .mt30 {
 	margin-top: 30px;
+}
+.mt20 {
+	margin-top: 20px;
+}
+.ttl-h2 {
+	font-family: Raleway-Bold;
+	text-transform: uppercase;
+	font-size: 28px;
 }
 @media (min-width: 1200px) {
 	.modal-dialog {
