--- a/wp-content/themes/analysis-center/css/main.css
+++ b/wp-content/themes/analysis-center/css/main.css
@@ -470,6 +470,7 @@ footer a {
 .add-channel .warrap-add-channel input{
 	display: table-cell;
 	width: calc(100% - 50px);
+	padding-left: 6px;
 }
 .add-channel .warrap-add-channel button{
 	display: table-cell;
@@ -480,7 +481,7 @@ footer a {
 	margin-bottom: 20px;
 }
 a:visited {
-	color: royalblue;
+	color: #337ab7;
 }
 .warrap-sort {
 	text-align: right;
