--- a/wp-content/themes/analysis-center/css/main.css
+++ b/wp-content/themes/analysis-center/css/main.css
@@ -771,8 +771,33 @@ a:hover {
 
 .page-template-facebook-detail-comment th:nth-child(2), .page-template-facebook-detail-comment td:nth-child(2) {
     width: 142px;
+    word-break: break-word;
 }
 
-.page-template-facebook-detail-comment th:nth-child(5), .page-template-facebook-detail-comment td:nth-child(5) {
-    word-break: break-all;
+.page-template-facebook-detail-comment td {
+	word-break: break-all;
+}
+
+.page-template-facebook-detail-comment th:nth-child(3), .page-template-facebook-detail-comment th:nth-child(4), .page-template-facebook-detail-comment th:nth-child(5), .page-template-facebook-detail-comment td:nth-child(3), .page-template-facebook-detail-comment td:nth-child(4), .page-template-facebook-detail-comment td:nth-child(5) {
+    width: 315px;
+}
+
+.table-show-detail td:nth-child(2) a {
+    color: #333;
+}
+
+.table-show-detail td:nth-child(3) a {
+    color: #fff;
+}
+
+.table-show-detail td:nth-child(4) a {
+    color: #000;
+}
+
+.table-show-detail td:nth-child(5) a {
+    color: #000;
+}
+
+.table-show-detail td:nth-child(6) a {
+	color: #fff;
 }
